Add Project Tests CRD

--- a/static/crds/testing/meta.dev.upbound.io_e2etests.yaml
+++ b/static/crds/testing/meta.dev.upbound.io_e2etests.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.16.5
+    controller-gen.kubebuilder.io/version: v0.18.0
   name: e2etests.meta.dev.upbound.io
 spec:
   group: meta.dev.upbound.io
@@ -21,7 +21,9 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: E2ETest defines the schema for the E2ETest custom resource.
+        description: |-
+          E2ETest defines the schema for the E2ETest custom resource used for e2e
+          testing of Crossplane configurations in controlplanes.
         properties:
           apiVersion:
             description: |-
@@ -41,11 +43,22 @@ spec:
           metadata:
             type: object
           spec:
-            description: E2ETestSpec defines the specification for the E2ETest custom
-              resource.
+            description: |-
+              E2ETestSpec defines the specification for e2e testing of Crossplane
+              configurations. It orchestrates the complete test lifecycle including setting
+              up controlplane, applying test resources in the correct order (InitResources
+              → Configuration → ExtraResources → Manifests), validating conditions, and
+              handling cleanup. This spec allows you to define e2e tests that verify your
+              Crossplane compositions, providers, and managed resources work correctly
+              together in a real controlplane environment.
             properties:
               crossplane:
-                description: Crossplane configuration for the test
+                description: |-
+                  Crossplane specifies the Crossplane configuration and settings required
+                  for this test. This includes the version of Universal Crossplane to
+                  install, and optional auto-upgrade settings. The configuration defined
+                  here will be used to set up the controlplane before applying the test
+                  manifests.
                 properties:
                   autoUpgrade:
                     default:
@@ -92,19 +105,47 @@ spec:
                       rule: (self.matches('^[^v].*'))
                 type: object
               defaultConditions:
-                description: Default conditions for the test
+                description: |-
+                  DefaultConditions specifies the expected conditions that should be met
+                  after the manifests are applied. These are validation checks that verify
+                  the resources are functioning correctly. Each condition is a string
+                  expression that will be evaluated against the deployed resources. Common
+                  conditions include checking resource status for readiness
                 items:
                   type: string
                 minItems: 1
                 type: array
               extraResources:
-                description: Additional resources for the test
+                description: |-
+                  ExtraResources specifies additional Kubernetes resources that should be
+                  created or updated after the configuration has been successfully applied.
+                  These resources may depend on the primary configuration being in place.
+                  Common use cases include ConfigMaps, Secrets, providerConfigs. Each
+                  resource must be a valid Kubernetes object.
+                items:
+                  type: object
+                  x-kubernetes-preserve-unknown-fields: true
+                type: array
+              initResources:
+                description: |-
+                  InitResources specifies Kubernetes resources that must be created or
+                  updated before the configuration is applied. These are typically
+                  prerequisite resources that the configuration depends on. Common use
+                  cases include ImageConfigs, DeploymentRuntimeConfigs, or any foundational
+                  resources required for the configuration to work. Each resource must be a
+                  valid Kubernetes object.
                 items:
                   type: object
                   x-kubernetes-preserve-unknown-fields: true
                 type: array
               manifests:
-                description: Required manifests for the test
+                description: |-
+                  Manifests contains the Kubernetes resources that will be applied as part
+                  of this e2e test. These are the primary resources being tested - they
+                  will be created in the controlplane and then validated against the
+                  conditions specified in DefaultConditions. Each manifest must be a valid
+                  Kubernetes object. At least one manifest is required. Examples include
+                  Claims, Composite Resources or any Kubernetes resource you want to test.
                 items:
                   type: object
                   x-kubernetes-preserve-unknown-fields: true
@@ -114,7 +155,13 @@ spec:
                 description: If true, skip resource deletion after test
                 type: boolean
               timeoutSeconds:
-                description: Timeout for the test in seconds
+                description: |-
+                  TimeoutSeconds defines the maximum duration in seconds that the test is
+                  allowed to run before being marked as failed. This includes time for
+                  resource creation, condition checks, and any reconciliation processes. If
+                  not specified, a default timeout will be used. Consider setting higher
+                  values for tests involving complex resources or those requiring multiple
+                  reconciliation cycles.
                 minimum: 1
                 type: integer
             required:
