--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/core": "3.7.0",
     "@docusaurus/plugin-client-redirects": "3.7.0",
     "@docusaurus/plugin-content-docs": "3.7.0",
+    "@docusaurus/plugin-google-gtag": "^3.8.1",
     "@docusaurus/preset-classic": "3.7.0",
     "@docusaurus/theme-live-codeblock": "3.7.0",
     "@docusaurus/theme-mermaid": "3.7.0",
