Update Workload ID Docs (#898)
* Combines clouds and adds section to new nav

* Remove original AWS guide

* adds redirect

* Update docs/manuals/spaces/howtos/self-hosted/workload-id/billing-config.md

Co-authored-by: graphite-app[bot] <96075541+graphite-app[bot]@users.noreply.github.com>
Signed-off-by: rae sharp <8883519+tr0njavolta@users.noreply.github.com>

* Minor wording fixes

* add links

* fix link typo

* typo

---------

Signed-off-by: rae sharp <8883519+tr0njavolta@users.noreply.github.com>
Co-authored-by: graphite-app[bot] <96075541+graphite-app[bot]@users.noreply.github.com>
Co-authored-by: Tobias Kässer <tobias.kasser@upbound.io>

--- a/vercel.json
+++ b/vercel.json
@@ -1537,6 +1537,16 @@
             "permanent": true
         },
         {
+            "source": "/manuals/spaces/howtos/self-hosted/workload-id-backup-restore/",
+            "destination": "/manuals/spaces/howtos/self-hosted/workload-id/backup-restore-config/",
+            "permanent": true
+        },
+        {
+            "source": "/manuals/spaces/howtos/self-hosted/workload-id-backup-restore",
+            "destination": "/manuals/spaces/howtos/self-hosted/workload-id/backup-restore-config/",
+            "permanent": true
+        },
+        {
             "source": "/manuals/marketplace",
             "destination": "/manuals/marketplace/overview/",
             "permanent": true
