add marketplace redirect

--- a/vercel.json
+++ b/vercel.json
@@ -1565,6 +1565,11 @@
             "source": "/manuals/uxp/guides/self-managed-uxp/license-management(/)?",
             "destination": "/manuals/uxp/howtos/self-managed-uxp/license-management/",
             "permanent": true
+        },
+        {
+            "source": "/upbound-marketplace(/)?",
+            "destination": "/manuals/marketplace/overview/",
+            "permanent": true
         }
     ]
 }
