--- a/utils/vale/styles/Upbound/Spelling.yml
+++ b/utils/vale/styles/Upbound/Spelling.yml
@@ -8,6 +8,6 @@
 # For a list of all options, see https://errata-ai.gitbook.io/vale/getting-started/styles
 extends: spelling
 message: 'Spelling check: "%s"?'
-level: warning
+level: error
 ignore:
   - Upbound/spelling-exceptions.txt
